--- a/docs/sass/foundation/_default-setting.scss
+++ b/docs/sass/foundation/_default-setting.scss
@@ -111,6 +111,10 @@ section {
   display: block;
 }
 
+strong {
+  font-weight: bold;
+}
+
 a {
   transition: opacity 0.5s;
   text-decoration: none;
