--- a/docs/sass/app.scss
+++ b/docs/sass/app.scss
@@ -3,12 +3,8 @@
 
  App SCSS.
 
-   Design Concept
-  ・FLOCCS
-   => https://github.com/hiloki/flocss
-
 ==============================================================================*/
-@import "foundation/**";
-@import "layout/**";
-@import "object/**"; // or
+@import "default-setting/**";
+@import "variables/**";
+@import "mixins/**"; // or
 //@import "**";
